[gd_scene load_steps=8 format=3 uid="uid://cnu3phopfw1fd"]

[ext_resource type="Script" path="res://interrogation.gd" id="1_vfgu1"]
[ext_resource type="Texture2D" uid="uid://da0s4fmwor73h" path="res://interrogation/textbox.png" id="2_xn1k4"]
[ext_resource type="Texture2D" uid="uid://b2hqpm67p54xt" path="res://interrogation/ceo.png" id="2_yeqms"]
[ext_resource type="Texture2D" uid="uid://c4mhcoa81bydh" path="res://interrogation/Geisha_Kyoto_Gion.jpg" id="4_8wqdq"]
[ext_resource type="Texture2D" uid="uid://cgudjncmy7yir" path="res://black.png" id="5_sy7a0"]
[ext_resource type="Texture2D" uid="uid://u3il2v04boid" path="res://mikeGravel.png" id="5_x0k3f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0nou"]
size = Vector2(191, 222)

[node name="Interrogation" type="Node2D"]
script = ExtResource("1_vfgu1")

[node name="visual" type="Sprite2D" parent="."]
position = Vector2(576, 328)
scale = Vector2(0.806158, 0.957478)
texture = ExtResource("2_yeqms")

[node name="littleBackdropRectangle" type="Sprite2D" parent="."]
position = Vector2(1334, 329)
scale = Vector2(0.463472, 0.712912)
texture = ExtResource("2_xn1k4")

[node name="littleBackdropRectangle2" type="Sprite2D" parent="."]
position = Vector2(1331, 130)
scale = Vector2(0.463472, 0.712912)
texture = ExtResource("2_xn1k4")

[node name="textBox" type="Sprite2D" parent="."]
position = Vector2(514, 539)
scale = Vector2(0.812144, 1.09341)
texture = ExtResource("2_xn1k4")

[node name="theText" type="Label" parent="textBox"]
top_level = true
offset_left = 313.0
offset_top = 458.0
offset_right = 714.0
offset_bottom = 619.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Hello this is the text
"
autowrap_mode = 2

[node name="painting" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="painting"]
position = Vector2(152, 136)
scale = Vector2(0.586364, 0.618784)
texture = ExtResource("4_8wqdq")

[node name="paintingHitbox" type="CollisionShape2D" parent="painting"]
position = Vector2(151.5, 135)
shape = SubResource("RectangleShape2D_s0nou")

[node name="choice1Button" type="Button" parent="."]
offset_left = 38.0
offset_top = 500.0
offset_right = 271.0
offset_bottom = 610.0
theme_override_font_sizes/font_size = 20
text = "\"Hello this is choice 1\""

[node name="choice2Button" type="Button" parent="."]
offset_left = 797.0
offset_top = 490.0
offset_right = 1031.0
offset_bottom = 601.0
theme_override_font_sizes/font_size = 20
text = "\"Hello this is choice 2\""

[node name="endScreen" type="Sprite2D" parent="."]
visible = false
position = Vector2(695, 444)
scale = Vector2(1.24306, 1.39969)
texture = ExtResource("5_sy7a0")

[node name="cg" type="Sprite2D" parent="."]
top_level = true
position = Vector2(713, 342)
texture = ExtResource("5_x0k3f")

[connection signal="mouse_entered" from="painting" to="." method="_on_painting_mouse_entered"]
[connection signal="mouse_exited" from="painting" to="." method="_on_painting_mouse_exited"]
[connection signal="mouse_entered" from="choice1Button" to="." method="_on_choice_1_button_mouse_entered"]
[connection signal="mouse_exited" from="choice1Button" to="." method="_on_choice_1_button_mouse_exited"]
[connection signal="pressed" from="choice1Button" to="." method="_on_choice_1_button_pressed"]
[connection signal="mouse_entered" from="choice2Button" to="." method="_on_choice_2_button_mouse_entered"]
[connection signal="mouse_exited" from="choice2Button" to="." method="_on_choice_2_button_mouse_exited"]
[connection signal="pressed" from="choice2Button" to="." method="_on_choice_2_button_pressed"]
